# src/files/files.controller.ts
@@ -10,6 +10,7 @@ import {
   UseInterceptors,
   ParseFilePipeBuilder,
   HttpStatus,
+  Query,
 } from '@nestjs/common';
 import { FilesService } from './files.service';
 import { CreateFileDto } from './dto/create-file.dto';
@@ -18,6 +19,9 @@ import { Public } from '../decorator/public.decorator';
 import { FileInterceptor } from '@nestjs/platform-express';
 import { Express } from 'express';
 import { ApiTags } from '@nestjs/swagger';
+import { ResponseMessage } from 'src/decorator/response-message.decorator';
+import { User } from 'src/decorator/user.decorator';
+import { IUser } from 'src/users/user.interface';
 
 @ApiTags('File')
 @Controller('files')
@@ -44,28 +48,41 @@ export class FilesController {
     return { result: file, file };
   }
 
+  @ResponseMessage('Create file successfully')
   @Post()
-  create(@Body() createFileDto: CreateFileDto) {
-    return this.filesService.create(createFileDto);
+  create(@Body() createFileDto: CreateFileDto, @User() user: IUser) {
+    return this.filesService.create(createFileDto, user);
   }
 
+  @ResponseMessage('Get all files successfully')
   @Get()
-  findAll() {
-    return this.filesService.findAll();
+  findAll(
+    @Query('current') current: number,
+    @Query('pageSize') pageSize: number,
+    @Query() qs: string,
+  ) {
+    return this.filesService.findAll(+current, +pageSize, qs);
   }
 
+  @ResponseMessage('Get file successfully')
   @Get(':id')
   findOne(@Param('id') id: string) {
-    return this.filesService.findOne(+id);
+    return this.filesService.findOne(id);
   }
 
+  @ResponseMessage('Update file successfully')
   @Patch(':id')
-  update(@Param('id') id: string, @Body() updateFileDto: UpdateFileDto) {
-    return this.filesService.update(+id, updateFileDto);
+  update(
+    @Param('id') id: string,
+    @Body() updateFileDto: UpdateFileDto,
+    @User() user: IUser,
+  ) {
+    return this.filesService.update(id, updateFileDto, user);
   }
 
+  @ResponseMessage('Remove file successfully')
   @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.filesService.remove(+id);
+  remove(@Param('id') id: string | string[]) {
+    return this.filesService.remove(id);
   }
 }
